# Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  PositionBasedSkinningConstraints.cpp  PositionBasedSkinningConstraints.h  PositionBasedSkinningModel.cpp  PositionBasedSkinningModel.h  README.md  build.sh  fbx2pbd.py  main.cpp  main1.cpp  test_imgui.cpp  test_shrink.py  tool.py
CMake/: Common.cmake
PBD/: CMakeLists.txt
PBD/Utils/: CMakeLists.txt  FileSystem.h  Timing.h
Visualization/: Widget.hpp
animation/: BVHLoader.cpp  animation.cpp  animation.h
animation/bvh/: BVHLoader.cpp
data/bvh/: Praying.bvh
physics/: CMakeLists.txt
physics/PositionBasedDynamics/: CMakeLists.txt
physics/Simulation/: CMakeLists.txt
physics/Utils/: Version.h
render/: MiniGL.cpp  MiniGL.h
skinning/: LinearBlendSkinning.py  ProjectiveSkinning.py
utils/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  geometry.h  render.py  tools.py  utils.h
visual/: MeshUtils.h  Widget.cpp  Widget.h
